k8s/kustomize/gateway-config/dns-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dns-server
  namespace: istio-ingress
spec:
  hosts:
    - "adguard.local"
    - "10.1.1.200"
  gateways:
    - istio-ingress/http-gateway
  http:
    - route:
        - destination:
            host: adguardhome.dns.svc.cluster.local
            port:
              number: 3000
